AQ-120 Adds device id to user
