# backend/app/validators/shared/auth.validator.js
@@ -8,6 +8,10 @@ const validateUserLogin = [
 
     body('password')
         .notEmpty().withMessage('Password is required'),
+        
+    body('device_id')
+        .notEmpty().withMessage('Device ID is required')
+        .isString().withMessage('Device ID must be a string'),
 ];
 
 module.exports = { validateUserLogin };
